Prevent CSRF attacks

--- a/SimpleBlog/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SimpleBlog/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -41,6 +41,10 @@
     @Scripts.Render("~/admin/scripts")
     @RenderSection("Scripts", false)
 
+    <form class="hidden" id="anti-forgery-form">
+        @Html.AntiForgeryToken()
+    </form>
+
 </body>
 
 </html>
